# loader

./: .gitignore  CMakeLists.txt  solution.cmd
res/: resource.h  resource.manifest  resource.rc
src/: common.cpp  common.h  main.cpp
src/os/: process.h
